# seed2need-silo-coin

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
.travis/: test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  install_db4.sh  seed2need-cli.bash-completion  seed2need-qt.pro  seed2need-tx.bash-completion  seed2needd.bash-completion  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  rules  seed2need-qt.desktop  seed2need-qt.install  seed2need-qt.lintian-overrides  seed2need-qt.manpages  seed2need-qt.protocol  seed2needd.bash-completion  seed2needd.examples  seed2needd.install  seed2needd.lintian-overrides  seed2needd.manpages  seed2needd.postinst  seed2needd.postrm  seed2needd.service  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  test_deterministic_coverage.sh  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  (+2 more)
depends/: README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-memory.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
params/: Makefile  Makefile.in  install-params.sh  sapling-output.params
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blob_uint256.h  blockassembler.cpp  blockassembler.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  (+128 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  paymentserver.h  peertablemodel.cpp  peertablemodel.h  qvalidatedlineedit.cpp  (+24 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  openuridialog.ui  optionsdialog.ui  rpcconsole.ui
src/qt/locale/: seed2need_bn.ts  seed2need_de.ts  seed2need_en.ts  seed2need_en_US.ts  seed2need_es.ts  seed2need_es_ES.ts  seed2need_fa.ts  seed2need_fr_FR.ts  seed2need_hr_HR.ts  seed2need_it.ts  seed2need_ko_KR.ts  seed2need_nl.ts  seed2need_pl.ts  seed2need_pt.ts  seed2need_pt_BR.ts  seed2need_ru.ts  seed2need_sv.ts  seed2need_tr.ts  seed2need_zh_CN.ts
src/qt/res/: seed2need-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/seed2need/: addnewaddressdialog.cpp  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  createproposaldialog.cpp  createproposaldialog.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  governancemodel.cpp  governancemodel.h  governancewidget.cpp  governancewidget.h  (+70 more)
src/qt/seed2need/forms/: addresseswidget.ui  balancebubble.ui  coldstakingwidget.ui  createproposaldialog.ui  csrow.ui  dashboardwidget.ui  governancewidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  txrow.ui  votedialog.ui  welcomecontentwidget.ui
src/qt/seed2need/res/css/: style_dark.css  style_light.css
src/qt/seed2need/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/seed2need/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswalletoptionswidget.ui  settingswidget.ui
src/qt/test/: test_main.cpp  uritests.cpp
test/: README.md
util/: fetch-params.sh
(+553 files in other folders)
